# lingodb

./: .env.example  .gitignore  ADAPTIVE_ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURE_IDEAS.md  FUNCTION_EXTRACTION_ISSUES.md  LICENSE  NOTICE  README.md  base.spec.md  build-js.sh  check_db_simple  check_db_simple.rs  coverage.md  decomposition.spec.md  demo_tests  function.spec.md  implementation_results.md  intent.spec.md  lingo_analysis.txt  linguistic_database_seeder.rs  linguistic_seed_data.json  mirroring_tests.rs  scraping_guide.md  simplified_seeder  simplified_seeder.rs  test_database_contents.rs  test_decomposition.rs  test_function_extraction  test_function_extraction.rs  test_layer_navigation  test_layer_navigation.rs  test_patterns_1.rs  test_patterns_2.rs  test_patterns_3.rs  test_runner  working_seeder  working_seeder.rs
.github/workflows/: ci.yml  release.yml  security.yml
benches/: performance.rs
docs/: data_sources.md  linguistic_coverage.md
examples/: add_morphemes.rs  auto_build.rs  build_comprehensive_db.rs  build_db.rs  build_standard_db.rs  bulk_adaptive_addition.rs  debug_connections.rs  debug_db.rs  debug_db2.rs  debug_header.rs  fast_dual_calibration.rs  inspect_db.rs  multi_pass_calibration.rs  query_demo.rs  quick_calibration.rs  spatial_calibration.rs  test_layers.rs  test_patterns.rs  test_patterns_2.rs  test_patterns_3.rs  textual_analysis.rs  use_standard_db.rs  visual_demo.rs
js/: README.md  package-lock.json  package.json  tsconfig.json
js/examples/: basic-usage.js
js/src/: index.ts
src/: config.rs  ffi.rs  lib.rs  logging.rs  main.rs  wasm.rs
src/config/: env.rs
src/core/: adaptive_space.rs  bytecode.rs  connection.rs  coordinate.rs  error.rs  mod.rs  node.rs  tests.rs  types.rs
src/data/: data_integration.rs  english_base.rs  mod.rs  scraped_data.rs  seeder.rs
src/discovery/: analogy.rs  auto_builder.rs  mod.rs  morphology.rs
src/engine/: executor.rs  mod.rs
src/index/: mod.rs  octree.rs  vertical.rs
src/mirroring/: composition.rs  empirical_weights.rs  mod.rs  opposition.rs  synthesis.rs
src/morphology/: mod.rs
src/plugins/: function_extraction.rs  intent_detection.rs  mod.rs  registry.rs
src/query/: builder.rs  mod.rs
src/security/: mod.rs
src/storage/: builder.rs  file_format.rs  mmap.rs  mmap_test.rs  mod.rs  string_table.rs
tests/: _skip_enhanced_etymological_mirroring_test.rs  _skip_integration_test.rs  _skip_mirroring_comprehensive_test.rs  check_sizes.rs  complex_intent_test.rs  debug_intent_test.rs  enhanced_function_test.rs  function_extraction_test.rs  integration_test.rs  intent_detection_test.rs  mirroring_test.rs  showcase_test.rs  simple_intent_test.rs
tests/coverage_report/html/: index.html
tests/coverage_report/html/coverage/Users/boss/Documents/projects/lingo/src/: config.rs.html  ffi.rs.html  logging.rs.html
(+24 files in other folders)
