[package]
name = "lingo"
version = "0.1.0"
edition = "2021"
authors = ["Roberto Antunes <roberto@antunes.dev>"]
description = "Revolutionary 3D spatial linguistic database with orthogonal connections"
repository = "https://github.com/RobAntunes/lingodb"
license-file = "LICENSE"
readme = "README.md"
keywords = ["linguistics", "database", "nlp", "morphology", "semantic-search"]
categories = ["database", "text-processing", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
memmap2 = "0.9"
bitflags = { version = "2.4", features = ["serde"] }
lru = "0.12"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and checksums
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# System directories
dirs = "5.0"

# WebAssembly bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

# Console logging for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"
env_logger = "0.11"

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[[example]]
name = "build_db"
path = "examples/build_db.rs"

[[example]]
name = "query_demo"
path = "examples/query_demo.rs"
